# monster-game-resort-concierge

./: .claudeignore  .coverage.U-SH-HO-MAC211-5_local.pid60213.XVxsyiLx.HNQIp837rWOh  .dockerignore  .env.example  .gitignore  CHAT_UI_GUIDE.md  Dockerfile  EVALUATION.md  FEATURES_GUIDE.md  LICENSE  README.md  alembic.ini  chat_ui.py  docker-compose.yml  fix_dependencies_final.py  inspect_and_ingest_rag.py  main.py  master_check.py  prometheus.yml  pyproject.toml  pyproject.toml.backup  pytest.ini  rag_eval.ipynb  requirements.txt  run_audit.py  stress_test.py  test_chat.sh  test_embeddings_tokens.py
.github/workflows/: ci.yml  test.yml
.rag_store_test/: chroma.sqlite3
app/: __init__.py  admin_routes.py  advanced_rag.py  auth.py  auth_mixins.py  config.py  database.py  hallucination.py  ingest_knowledge.py  langchain_rag.py  llm_providers.py  lora_integration.py  main.py  memory.py  pdf_generator.py  rag.py  security.py  tools.py  validation.py
app/api/: admin_routes.py
app/auth/: auth_mixins.py  jwt_auth.py  refresh_store.py  security.py  users_db.py
app/back_office/: cache_utils.py  database.py
app/cctv/: mlflow_tracking.py  monitoring.py  profile_utils.py
app/concierge/: cost_tracker.py  guardrails.py  llm_providers.py  lora_integration.py  mcp_server.py  memory.py  observability.py  orchestrator.py  prompt_loader.py  structured_output.py  tools.py
app/console/: routes.py
app/core/: cost_tracker.py  guardrails.py  llm_providers.py  lora_integration.py  mcp_server.py  memory.py  observability.py  orchestrator.py  prompt_loader.py  stream_client.py  structured_output.py  tools.py
app/data/: events.py
app/database/: cache_utils.py  db.py
app/front_desk/: admin_routes.py
app/inspector/: routes.py
app/manager_office/: hallucination.py  validation.py
app/monitoring/: logging_utils.py  metrics.py  metrics_dashboard.py  mlflow_tracking.py  profile_utils.py
app/rag/: advanced_rag.py  ingest_knowledge.py  langchain_rag.py  vector_rag.py
app/records_room/: advanced_rag.py  ingest_knowledge.py  langchain_rag.py  rag.py
app/security_dept/: auth.py  auth_mixins.py  security.py
configs/: model_pricing.yaml
data/: concierge_qa.json  eval_cases.json
docs/: linkedin_content_plan.md  linkedin_hallucination_series_part3.md
evals/: STUDY_NOTES_ground_truth.md  eval_retrieval.py  hallucination_experiments.py  llm_judge.py  retrieval_ground_truth.json
migrations/: env.py
notebooks/: lora_comparison_eval.ipynb  practice.ipynb  ragas_evaluation.ipynb  test_queries.py
prompts/: executor.yaml  planner.yaml  summarization.yaml
reports/: cost_analysis_history.jsonl  eval_history.jsonl  eval_report.json  hallucination_history.jsonl  retrieval_ablation.json  retrieval_metrics.json
scripts/: ablation_retrieval.py  benchmark_rag.py  compare_rag_vs_finetune.py  cost_analysis.py  eval_harness.py  finetune_lora.py  finetune_mlx.py  generate_synthetic_dataset.py  prep_finetune_data.py  run_rag_experiment.py  test_context_management.py  test_lora.py  test_openai_connection.py  test_tool_call_fixes.py
tests/: conftest.py  test_api_basic.py  test_api_endpoints.py  test_api_key_manager.py  test_booking.py  test_cache_utils.py  test_guardrails.py  test_hallucination.py  test_langchain_rag.py  test_llm_providers.py  test_mlflow_tracking.py  test_observability.py  test_orchestrator.py  test_rag.py  test_rag_unit.py  test_ragas_eval.py  test_retrieval_metrics.py  test_search_events.py  test_security.py  test_structured_output.py  test_tool_sandbox.py  test_unit_core.py  test_validate_tool_call.py
updated_readmes/: API_KEY_MANAGEMENT_GUIDE.md  ARCHITECTURE_DECISIONS.md  Akin.md  Audit_StressTest.md  CRITICAL_BUG_FIXES_GUIDE.md  ClaudeProjectScenarioQuestions.md  ClaudeProjectScenarioQuestions2.md  ClaudeprojectEval.md  Curl_Test.md  Definitions.md  FEATURES_GUIDE.md  FastAPIDockerStartup.md  Grafana_Observability_README.md  Hybrid.md  JobProspects.md  KNOWLEDGE_BASE_IMPLEMENTATION_GUIDE.md  KeepBoth.md  LORA_GUIDE.md  LORA_IMPLEMENTATION_SUMMARY.md  MoreDoc.md  PROJECT_PITCH.html  PROJECT_PITCH.md  Prometheus_Readme.md  RAG_IMPROVEMENTS.md  README_ADVANCED_RAG.md  SECURITY_IMPLEMENTATION.md  SETUP_GUIDE.md  SystemWorking.md  TEST_SUITE_README.md  Unicorn_app.main.md  akin.html  folderPathConvention.md  gravana.md  resume.md
(+61 files in other folders)
