[project]
name = "monster-resort-concierge"
version = "0.1.0"
description = "Spooky LLM-powered hotel concierge with agent, RAG, streaming chat"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # ─────────────────────────────────────────────────────────────────────────────
    # Core Web Framework & Server
    # ─────────────────────────────────────────────────────────────────────────────
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.6",
    "pydantic-settings>=2.10.1",
    # ─────────────────────────────────────────────────────────────────────────────
    # HTTP, Async & Files
    # ─────────────────────────────────────────────────────────────────────────────
    "httpx==0.28.1",
    "aiofiles<24.0",
    # ─────────────────────────────────────────────────────────────────────────────
    # Rate Limiting & Monitoring
    # ─────────────────────────────────────────────────────────────────────────────
    "slowapi==0.1.9",
    "prometheus-client==0.21.1",
    # ─────────────────────────────────────────────────────────────────────────────
    # LangChain 0.3.x family (compatible ecosystem)
    # ─────────────────────────────────────────────────────────────────────────────
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-community>=0.3.28,<0.5.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langchain-huggingface>=0.3.0,<1.0.0",
    # ─────────────────────────────────────────────────────────────────────────────
    # Embeddings & Transformers (compatible with langchain-huggingface 0.3.x)
    # ─────────────────────────────────────────────────────────────────────────────
    "sentence-transformers>=3.3.0",      # Latest stable series
    "transformers>=4.41.0,<5.0.0",       # Compatible with sentence-transformers
    "tokenizers>=0.19.0,<0.21.0",        # Compatible with transformers 4.x
    "huggingface-hub>=0.33.4,<1.0.0",   # Compatible with langchain-huggingface
    "torch>=2.5.0",                      # CPU; change to torch[cu121] if GPU
    # ─────────────────────────────────────────────────────────────────────────────
    # Vector Database
    # ─────────────────────────────────────────────────────────────────────────────
    "chromadb==0.5.23",
    # ─────────────────────────────────────────────────────────────────────────────
    # RAG Evaluation
    # ─────────────────────────────────────────────────────────────────────────────
    "ragas==0.2.11",
    "datasets==3.2.0",
    # ─────────────────────────────────────────────────────────────────────────────
    # PDF, Security, Utilities
    # ─────────────────────────────────────────────────────────────────────────────
    "reportlab>=4.4.9",
    "bleach>=6.2.0",
    "email-validator>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.5",
    "python-dateutil==2.9.0.post0",
    # ─────────────────────────────────────────────────────────────────────────────
    # UI
    # ─────────────────────────────────────────────────────────────────────────────
    "gradio>=4.44.1,<5.0.0",             # Pin <5.0 if 5.x breaks something
    # ─────────────────────────────────────────────────────────────────────────────
    # Database & Migrations
    # ─────────────────────────────────────────────────────────────────────────────
    "sqlalchemy==2.0.35",
    "alembic==1.14.0",
    "openai>=2.16.0",
    "anthropic>=0.39.0",
    "mlflow>=2.19.0",
    "rank-bm25>=0.2.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "flake8==5.0.4",
    "black==24.10.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "gunicorn==23.0.0",               # optional prod server
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Recommended uv settings for better resolution & caching
resolution = "highest"
cache-dir = ".uv-cache"



